--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
             <div id="produto">
                 <h2 id="tituloP1">Produto 1</h2>
-                <img src="/images/paris.png" alt="">    
+                <img src="./images/paris.png" alt="">    
                 <p>Descrição do produto</p>
                 <button onclick="P1()">Adicionar</button>
             </div><br>
 
             <div id="produto">
                 <h2 id="tituloP2">Produto 2</h2>
-                <img src="/images/toquio.png" alt="">    
+                <img src="./images/toquio.png" alt="">    
                 <p>Descrição do produto</p>
                 <button onclick="P2()">Adicionar</button>
             </div><br>
@@ -63,14 +63,14 @@
 
             <div id="produto">
                 <h2 id="tituloP3">Produto 3</h2>
-                <img src="/images/rio.png" alt="">    
+                <img src="./images/rio.png" alt="">    
                 <p>Descrição do produto</p>
                 <button onclick="P3()">Adicionar</button>
             </div><br>
             
             <div id="produto">
                 <h2 id="tituloP4">Produto 4</h2>
-                <img src="/images/coliseu.png" alt="">    
+                <img src="./images/coliseu.png" alt="">    
                 <p>Descrição do produto</p>
                 <button onclick="P4()">Adicionar</button>
             </div><br>
