--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <h1 id="tituloCadastro">Cadastro</h1>
 
-<form onsubmit="cadastro()">
+<form onsubmit="cadastro(event)">
     <label>Nome</label>
     <input id="Inome" type="text" required><br>
     <label>E-Mail</label>
