--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@
 
 <h1 id="tituloSobre">Sobre</h1>
 
-<p id="sobre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eaque ducimus tempora reiciendis beatae consectetur hic aspernatur pariatur, et natus molestias doloribus libero magnam laborum sed ad porro modi odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est odit ipsa beatae quibusdam officia eius vero, molestiae voluptate expedita veritatis cum doloribus incidunt ullam nostrum optio dolores fugit provident fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus praesentium natus soluta dolorum vel laudantium, delectus a voluptate vero aut maiores sint libero sapiente deleniti eaque asperiores amet ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum architecto ratione provident, quae, exercitationem mollitia numquam odit itaque asperiores dolores repudiandae neque hic corrupti earum sit molestiae quo officiis saepe. </p>
+<pre id="sobre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eaque ducimus tempora reiciendis
+beatae consectetur hic aspernatur pariatur, et natus molestias doloribus libero magnam laborum sed ad porro modi 
+odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est odit ipsa beatae quibusdam officia eius vero,
+molestiae voluptate expedita veritatis cum doloribus incidunt ullam nostrum optio dolores fugit provident fugiat.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus praesentium natus soluta dolorum vel 
+laudantium, delectus a voluptate vero aut maiores sint libero sapiente deleniti eaque asperiores amet ad.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum architecto ratione provident, quae, exercitationem
+mollitia numquam odit itaque asperiores dolores repudiandae neque hic corrupti earum sit molestiae quo officiis saepe. </pre>
 
 <h1 id="tituloContato">Contato</h1>
 
