--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ molestiae voluptate expedita veritatis cum doloribus incidunt ullam nostrum opti
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus praesentium natus soluta dolorum vel 
 laudantium, delectus a voluptate vero aut maiores sint libero sapiente deleniti eaque asperiores amet ad.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum architecto ratione provident, quae, exercitationem
-mollitia numquam odit itaque asperiores dolores repudiandae neque hic corrupti earum sit molestiae quo officiis saepe. </pre>
+mollitia numquam odit itaque asperiores dolores repudiandae neque hic corrupti earum sit molestiae quo officiis
+saepe. </pre>
 
 <h1 id="tituloContato">Contato</h1>
 
